@@ -1,5 +1,10 @@
 2002-10-20  Daniel Elstner  <daniel.elstner@gmx.net>
 
+	* src/mainwindow.cc (MainWindow::on_filelist_bound_state_changed):
+	Don't forget to update the prev/next match buttons' sensitivity.
+
+2002-10-20  Daniel Elstner  <daniel.elstner@gmx.net>
+
 	* src/filelist.cc (FileList::find_files): Catch exceptions from
 	Glib::Dir and Glib::file_test().
 
